--- a/Webpack/task_2/package.json
+++ b/Webpack/task_2/package.json
@@ -1,28 +1,25 @@
 {
   "name": "task_1",
   "version": "1.0.0",
+  "description": "Task 1",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
-    "css-loader": "^7.1.2",
+    "css-loader": "^5.2.4",
     "file-loader": "^6.2.0",
-    "mini-css-extract-plugin": "^2.9.0",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "style-loader": "^4.0.0",
-    "terser-webpack-plugin": "^5.3.10",
-    "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4"
+    "image-webpack-loader": "^8.1.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.24.3",
+    "webpack-cli": "^4.5.0"
   },
   "dependencies": {
-    "jquery": "^3.7.1",
-    "loadsh": "^0.0.4"
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.20"
   }
 }
